--- a/assets/frontend/css/bootstrap.css
+++ b/assets/frontend/css/bootstrap.css
@@ -5557,7 +5557,7 @@ a.thumbnail:focus {
 
 .label,
 .badge {
-  display: inline-block;
+  /*display: inline-block;
   padding: 2px 4px;
   font-size: 11.844px;
   font-weight: bold;
@@ -5566,13 +5566,13 @@ a.thumbnail:focus {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #999999;
+  background-color: #999999;*/
 }
 
 .label {
-  -webkit-border-radius: 3px;
+ /* -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
-          border-radius: 3px;
+          border-radius: 3px;*/
 }
 
 .badge {
